Switch to auto-generating the executables for the components.
This lets us carry less code around, that is really all
boilerplate anyway.

Signed-off-by: Chris Lalancette <clalancette@openrobotics.org>

--- a/kobuki_bumper2pc/CMakeLists.txt
+++ b/kobuki_bumper2pc/CMakeLists.txt
@@ -31,16 +31,9 @@ ament_target_dependencies(kobuki_bumper2pc
   "sensor_msgs"
 )
 
-add_executable(kobuki_bumper2pc_node src/kobuki_bumper2pc_node.cpp)
-ament_target_dependencies(kobuki_bumper2pc_node
-  "rclcpp"
-)
-target_link_libraries(kobuki_bumper2pc_node
-  kobuki_bumper2pc
-)
-
-rclcpp_components_register_nodes(kobuki_bumper2pc
-  "kobuki_bumper2pc::Bumper2PcNode")
+rclcpp_components_register_node(kobuki_bumper2pc
+  PLUGIN "kobuki_bumper2pc::Bumper2PcNode"
+  EXECUTABLE kobuki_bumper2pc_node)
 
 install(TARGETS kobuki_bumper2pc
   ARCHIVE DESTINATION lib
@@ -50,9 +43,6 @@ install(TARGETS kobuki_bumper2pc
 
 install(DIRECTORY include/${PROJECT_NAME}/
   DESTINATION include/${PROJECT_NAME}
-)
-install(TARGETS kobuki_bumper2pc_node
-  DESTINATION lib/${PROJECT_NAME}
 )
 install(DIRECTORY launch
   DESTINATION share/${PROJECT_NAME}
