Update all of the package.xml versions.
Otherwise, this wouldn't possibly be bloom releasable.
While we are in here, cleanup some of the test in the package.xml

Signed-off-by: Chris Lalancette <clalancette@openrobotics.org>

--- a/kobuki_node/package.xml
+++ b/kobuki_node/package.xml
@@ -2,9 +2,9 @@
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>kobuki_node</name>
-  <version>0.7.6</version>
+  <version>1.0.0</version>
   <description>
-      ROS node for Kobuki: ROS wrapper for the Kobuki driver.
+      ROS 2 node for Kobuki: ROS wrapper for the Kobuki driver.
   </description>
   <author>Chris Lalancette</author>
   <author>Daniel Stonier</author>
